feat(ci): add repository_dispatch trigger to the stdlib update job

--- a/.github/workflows/update_std_docs.yml
+++ b/.github/workflows/update_std_docs.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "0 0 1 * *"
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - my_update_docs
 
 permissions:
   contents: write
